# GB_Python_Flask01

blog/: Dockerfile  README.md  config_dev.json  docker-compose.yaml  pyproject.toml  requirements.txt  wsgi.py
blog/blog/: admin.py  app.py  cli.py  configs.py  db.sqlite
blog/blog/api/: __init__.py  article.py  author.py  user.py
blog/blog/article/: views.py
blog/blog/forms/: article.py  user.py
blog/blog/models/: __init__.py  article.py  author.py  user.py
blog/blog/permissions/: article.py  user.py
blog/blog/schemas/: article.py  tag.py  user.py
blog/blog/templates/: base.html  index.html  navbar.html
blog/blog/templates/articles/: create.html  details.html  list.html  list_REST.html
blog/blog/templates/auth/: login.html  register.html
blog/blog/templates/authors/: list.html
blog/blog/templates/macro/: formhelpers.html
blog/blog/templates/users/: details.html  list.html
blog/blog/user/: views.py
blog/blog/views/: auth.py
blog/blog/views/admin/: views.py
blog/blog/views/article/: views.py
blog/blog/views/author/: views.py
blog/blog/views/user/: views.py
blog/migrations/versions/: 10308618cd2d_.py  2a373088141c_.py  40567b6cc742_update_user_model.py  4d51268093f9_.py  5bc8a783a27d_.py  8fcb414be406_.py  e34992785c35_create_user_model.py  e53505dc3577_.py
