[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask-login = "0.5.0"
psycopg2-binary = "^2.9.6"
bcrypt-flask = "^1.0.2"
email-validator = "^1.3.1"
flask-admin = "1.5.8"
marshmallow-jsonapi = "^0.24.0"
flask-jsonapi = "^1.3.0"
six = "^1.16.0"
flask = "1.1.4"
flask-sqlalchemy = "2.5.1"
flask-wtf = "0.15.1"
flask-migrate = "3.0.0"
markupsafe = "2.0.1"
sqlalchemy = "1.3.24"
flask-combo-jsonapi = "^1.1.0"
combojsonapi = "^1.1.2"
gunicorn = "20.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pep8 = "^1.7.1"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
